# grove-care-rewards

./: .env.production  .envrc  404.html  CLAUDE.md  CNAME  README.md  index.html  package.json  vite.config.ts
.claude/: settings.local.json
assets/: index-1oGpR0Dw.js  index-B5Dzyh5t.js  index-B61AWJ-5.js  index-B9YnUFaN.js  index-BBuab0Wt.js  index-BD8pFnr6.js  index-BGathI58.css  index-BNArOxS_.js  index-BWDodzcl.js  index-BXTu0QiN.js  index-BYXGbJNv.css  index-BYvkLdoL.js  index-Bagd5PFF.css  index-Be57q2mM.js  index-BgxAere3.js  index-BgxCRHph.css  index-Bhs0AeqK.css  index-BkTnO8Zo.js  index-BlML1nTE.css  index-Bnr7cYfE.js  index-BqMkjMsx.css  index-BqWnO7Qt.js  index-BumHlDEN.js  index-C07IN9-x.css  index-C30prk3-.js  index-C3vOJvPk.js  index-C9GATg3a.js  index-CAdJctn1.js  index-CFYZ-Cq3.css  index-CHuHOf1T.js  index-CJ33AvIz.js  index-CRwccQOQ.css  index-CeIoLary.js  index-CjhD7CgR.js  index-CmLiIRDC.css  index-CnuLoEVE.css  index-Cw9NWigN.css  index-CxwJTUGK.css  index-D02NFsx4.js  index-D50pdVKg.css  (+44 more)
marketing_website/: .env.development  .env.example  README.md  index.html  package-lock.json
marketing_website/src/: App.tsx
marketing_website/src/components/: CTASection.tsx  FocusAreas.tsx  Footer.tsx  Header.tsx  HomeCareFooter.tsx  HomeCareHero.tsx  Navigation.tsx  SolutionSection.tsx
marketing_website/src/components/prior-auth/: FMLAFormModal.tsx  MedicationModal.tsx  MultiSelect.tsx  NewPatientsTable.tsx  PatientDetailsModal.tsx  PostingFormModal.tsx  PriorAuthTable.tsx  RequestModal.tsx  SurgeryCalendar.tsx
marketing_website/src/components/ui/: button.tsx
marketing_website/src/pages/: HomeCare.tsx  Index.tsx  InjuryManagement.tsx  MedicalSpend.tsx  PTAdherence.tsx  PostSurgicalCare.tsx  PreOpDemo.tsx  Raffle.tsx  ReferralDemos.tsx  Team.tsx  TreatmentPlanDemo.tsx
public/: 404.html
referral_app/: .env.example  .gitignore  CLAUDE.md  ERROR_REPORTING_SETUP.md  FUTURE_ENHANCEMENTS.md  Makefile  README.md  docker-compose.yml
referral_app/.claude/: settings.local.json
referral_app/backend/: .dockerignore  .gcloudignore  Dockerfile  MIGRATIONS.md  Makefile  app.yaml  atlas.hcl  atlas_loader.py  build.sh  make_admin.py  pyproject.toml  requirements.txt  test_documo_webhook.sh
referral_app/backend/app/: auth.py  check_sendas.py  database.py  documo_schemas.py  documo_service.py  email_legacy_backup.py  gcs_service.py  gmail_service.py  main.py  schemas.py  seed_data.py  setup_sendas.py
referral_app/backend/app/models/: __init__.py  address.py  base.py  insurance.py  patient.py  provider.py  provider_institution.py  referral.py  user.py  user_provider_network.py
referral_app/backend/assets/: mesfin.json  mesfin_preprocessed.json
referral_app/backend/backend/: test_auth.py  test_document_ai.py
referral_app/backend/backend/app/services/: __init__.py  document_ai_schemas.py  document_ai_service.py
referral_app/backend/backend/backend/: .env.example
referral_app/backend/migrations/: 20260119164158_baseline.sql  atlas.sum
referral_app/backend/scripts/: import_provider_institutions.py  preprocessing.py
referral_app/backend/static/: index.html
referral_app/backend/static/assets/: index-Bp5zGUjo.css  index-DVV7DKF3.js
referral_app/frontend/: .env.development  .env.production  Dockerfile  package-lock.json  package.json  vite.config.ts
referral_app/frontend/src/: App.css  App.tsx  BrowseProviders.tsx  EditProvider.tsx  ErrorBoundary.tsx  ForgotPassword.tsx  Login.tsx  MyInstitution.tsx  MyNetwork.tsx  Providers.tsx  ReferralForm.tsx  ResetPassword.tsx  Signup.tsx  errorReporting.ts  main.tsx
referral_app/frontend/src/components/: ProtectedRoute.tsx
referral_app/frontend/src/contexts/: AuthContext.tsx
src/: App.tsx  index.css
src/components/: CTA.tsx  CTASection.tsx  Features.tsx  FocusAreas.tsx  Footer.tsx  Header.tsx  Hero.tsx  HomeCareFooter.tsx  HowItWorks.tsx  Navigation.tsx  ProblemSection.tsx  SolutionSection.tsx
src/components/prior-auth/: NewPatientModal.tsx  NewPatientsTable.tsx  PriorAuthTable.tsx  RequestModal.tsx
src/components/ui/: button.tsx
src/pages/: HomeCare.tsx  Index.tsx  MedicalSpend.tsx  PTAdherence.tsx  PostSurgicalCare.tsx  PreOpDemo.tsx  PriorAuthDemo.tsx  Raffle.tsx  Team.tsx  TreatmentPlanDemo.tsx  Wellthy.tsx
