[project]
name = "grove-care-rewards-backend"
version = "0.1.0"
description = "Grove Care Rewards Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.1",
    "sqlalchemy==2.0.41",
    "asyncpg==0.31.0",
    "python-dotenv==1.0.0",
    "atlas-provider-sqlalchemy==0.4.0",
    "fastapi-users[sqlalchemy]==13.0.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",
    "gunicorn==21.2.0",
    "google-cloud-secret-manager==2.18.0",
    "cloud-sql-python-connector[asyncpg]==1.11.0",
    "usaddress==0.5.10",
    "google-auth==2.28.0",
    "google-auth-oauthlib==1.2.0",
    "google-api-python-client==2.116.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "ty>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty]
# ty type checker configuration
# Run with: uv run ty check
